# sleepy

./: Caddyfile  Cargo.toml
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.config.ts  app.html  app.scss  app.ts
frontend/src/lib/components/add-form/: add-form.component.html  add-form.component.scss  add-form.component.ts
frontend/src/lib/components/chart/: chart.component.html  chart.component.scss  chart.component.ts
frontend/src/lib/components/chart-column/: chart-column.component.html  chart-column.component.scss  chart-column.component.ts
frontend/src/lib/components/confirm-dialog/: confirm-dialog.component.html  confirm-dialog.component.ts
frontend/src/lib/components/stats/: stats.component.html  stats.component.scss  stats.component.ts
frontend/src/lib/components/theme-picker/: theme-picker.component.html  theme-picker.component.scss  theme-picker.component.ts
frontend/src/lib/services/: api.service.ts
src/: main.rs
