[package]
name = "sleepy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.3.1"
humantime = "2.3.0"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["fs"] }
